--- a/package.json
+++ b/package.json
@@ -27,12 +27,12 @@
     "typescript": "~3.7.2"
   },
   "dependencies": {
-    "@aws-cdk/aws-dynamodb": "^1.51.0",
-    "@aws-cdk/aws-events": "^1.51.0",
-    "@aws-cdk/aws-events-targets": "^1.51.0",
-    "@aws-cdk/aws-lambda": "^1.51.0",
-    "@aws-cdk/aws-lambda-event-sources": "^1.51.0",
-    "@aws-cdk/aws-lambda-nodejs": "^1.51.0",
+    "@aws-cdk/aws-dynamodb": "1.51.0",
+    "@aws-cdk/aws-events": "1.51.0",
+    "@aws-cdk/aws-events-targets": "1.51.0",
+    "@aws-cdk/aws-lambda": "1.51.0",
+    "@aws-cdk/aws-lambda-event-sources": "1.51.0",
+    "@aws-cdk/aws-lambda-nodejs": "1.51.0",
     "@aws-cdk/core": "1.51.0",
     "@dazn/lambda-powertools-logger": "^1.24.1",
     "@slack/web-api": "^5.11.0",
